# bughunt

./: .env.example  .gitignore  README.md  pyproject.toml  test_budget.py  test_client.py
src/bughunt/agent/: history.py  react_loop.py
src/bughunt/agent/prompts/: loader.py  react_agent.txt
src/bughunt/llm/: budget_tracker.py  mock_llm.py  ollama_client.py
src/bughunt/storage/: db.py  engagement.py
src/bughunt/tools/: registry.py  time_now.py
