[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bughunt"
version = "0.1.0"
description = "Offline-first agentic AI red-team system"
requires-python = ">=3.11"
dependencies = ["requests>=2.31", "tiktoken>=0.7"]

[project.scripts]
bughunt = "bughunt.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]
